--- a/projeto1/src/Makefile
+++ b/projeto1/src/Makefile
@@ -1,6 +1,15 @@
-generate_signal = generate-signal
-dft = dft
-bench = benchmarking
+generate_signal = tarefa1
+dft = tarefa23
+idft = tarefa4
+bench = tarefa5
+
+
+runall:
+	gfortran tarefa1.f -o tarefa1.exe
+	gfortran dft.f -o dft.exe
+	./tarefa1.exe
+	./dft.exe
+#	cp *.pdf ../relatorio/graficos/
 
 signal:
 	gfortran $(generate_signal).f -o $(generate_signal).exe
@@ -11,6 +20,11 @@ dft:
 	gfortran $(dft).f -o $(dft).exe
 run-dft:
 	./$(dft).exe
+
+idft:
+	gfortran $(idft).f -o $(idft).exe
+run-idft:
+	./$(idft).exe
 
 bench:
 	gfortran $(bench).f -o $(bench).exe
@@ -36,5 +50,5 @@ plot-%:
 	@rm *-inc*eps* *.log *.tex *.aux
 
 clean:
-	@rm *.exe *.dat  *.fort
+	@rm *.exe *.dat
 	@rm *-inc*eps* *.log *.tex *.aux *eps
