--- a/projeto4/src/Makefile
+++ b/projeto4/src/Makefile
@@ -8,7 +8,7 @@ run-all-rules:
 	./tarefa-1/all-rules.exe
 
 tarefa2:
-	gfortran tarefa-2/tarefa-2.f tarefa-2/DLA.f -o tarefa-2/tarefa-2.exe
+	gfortran tarefa-2/tarefa-2.f tarefa-2/DLA_2D.f -o tarefa-2/tarefa-2.exe
 run-tarefa2:
 	./tarefa-2/tarefa-2.exe
 
