tarefa1 concluida - falta escrever

--- a/projeto5/src/Makefile
+++ b/projeto5/src/Makefile
@@ -1,5 +1,5 @@
 tarefa1:
-	gfortran tarefa-1/tarefa-1.f -o tarefa-1/tarefa-1.exe
+	gfortran tarefa-1/tarefa-1.f tarefa-1/ising.f -o tarefa-1/tarefa-1.exe
 run-tarefa1:
 	./tarefa-1/tarefa-1.exe
 
