--- a/projeto5/src/Makefile
+++ b/projeto5/src/Makefile
@@ -1,7 +1,12 @@
 tarefa1:
-	gfortran tarefa-1/tarefa-1.f tarefa-1/ising.f -o tarefa-1/tarefa-1.exe
+	gfortran tarefa-1/tarefa-1.f ising_modules.f -o tarefa-1/tarefa-1.exe
 run-tarefa1:
 	./tarefa-1/tarefa-1.exe
+
+tarefa2:
+	gfortran tarefa-2/tarefa-2.f ising_modules.f -o tarefa-2/tarefa-2.exe
+run-tarefa2:
+	./tarefa-2/tarefa-2.exe
 
 compile:
 	gnuplot *.gp
