--- a/projeto5/src/Makefile
+++ b/projeto5/src/Makefile
@@ -4,9 +4,19 @@ run-tarefa1:
 	./tarefa-1/tarefa-1.exe
 
 tarefa2:
-	gfortran tarefa-2/tarefa-2.f ising_modules.f -o tarefa-2/tarefa-2.exe
-run-tarefa2:
-	./tarefa-2/tarefa-2.exe
+	gfortran tarefa-2/tarefa-2-b1.f ising_modules.f -o tarefa-2/tarefa-2-b1.exe
+	gfortran tarefa-2/tarefa-2-b2.f ising_modules.f -o tarefa-2/tarefa-2-b2.exe
+
+run-t2b1:
+	./tarefa-2/tarefa-2-b1.exe
+run-t2b2:
+	./tarefa-2/tarefa-2-b2.exe
+
+tarefa3:
+	gfortran tarefa-3/tarefa-3-c1.f ising_modules.f -o tarefa-3/tarefa-3-c1.exe
+
+run-t3c1:
+	./tarefa-3/tarefa-3-c1.exe
 
 compile:
 	gnuplot *.gp
