todos itens feitos

--- a/projeto6/src/Makefile
+++ b/projeto6/src/Makefile
@@ -1,35 +1,34 @@
 tarefa-a:
-	gfortran tarefa-A/tarefa-a.f molecular_dynamics.f -o tarefa-A/tarefa-a.exe
+	gfortran tarefa-A/tarefa-a.f   -o tarefa-A/tarefa-a.exe
 run-a:
 	./tarefa-A/tarefa-a.exe
 tarefa-b:
-	gfortran tarefa-B/tarefa-b.f molecular_dynamics.f -o tarefa-B/tarefa-b.exe
+	gfortran tarefa-B/tarefa-b.f   -o tarefa-B/tarefa-b.exe
 run-b:
 	./tarefa-B/tarefa-b.exe
 tarefa-c:
-	gfortran tarefa-C/tarefa-c.f molecular_dynamics.f -o tarefa-C/tarefa-c.exe
+	gfortran tarefa-C/tarefa-c.f   -o tarefa-C/tarefa-c.exe
 run-c:
 	./tarefa-C/tarefa-c.exe
 tarefa-d:
-	gfortran tarefa-D/tarefa-d.f molecular_dynamics.f -o tarefa-D/tarefa-d.exe
+	gfortran tarefa-D/tarefa-d.f   -o tarefa-D/tarefa-d.exe
 run-d:
 	./tarefa-D/tarefa-d.exe
 tarefa-e:
-	gfortran tarefa-E/tarefa-e.f molecular_dynamics.f -o tarefa-E/tarefa-e.exe
+	gfortran tarefa-E/tarefa-e.f   -o tarefa-E/tarefa-e.exe
 run-e:
 	./tarefa-E/tarefa-e.exe
 tarefa-f:
-	gfortran tarefa-F/tarefa-f.f molecular_dynamics.f -o tarefa-F/tarefa-f.exe
+	gfortran tarefa-F/tarefa-f.f   -o tarefa-F/tarefa-f.exe
 run-f:
 	./tarefa-F/tarefa-f.exe
 p6:
-	gfortran tarefa-A/tarefa-a.f molecular_dynamics.f -o tarefa-A/tarefa-a.exe
-	gfortran tarefa-B/tarefa-b.f molecular_dynamics.f -o tarefa-B/tarefa-b.exe
-	gfortran tarefa-C/tarefa-c.f molecular_dynamics.f -o tarefa-C/tarefa-c.exe
-	gfortran tarefa-D/tarefa-d.f molecular_dynamics.f -o tarefa-D/tarefa-d.exe
-	gfortran tarefa-E/tarefa-e.f molecular_dynamics.f -o tarefa-E/tarefa-e.exe
-	gfortran tarefa-F/tarefa-f.f molecular_dynamics.f -o tarefa-F/tarefa-f.exe
-
+	gfortran tarefa-A/tarefa-a.f   -o tarefa-A/tarefa-a.exe
+	gfortran tarefa-B/tarefa-b.f   -o tarefa-B/tarefa-b.exe
+	gfortran tarefa-C/tarefa-c.f   -o tarefa-C/tarefa-c.exe
+	gfortran tarefa-D/tarefa-d.f   -o tarefa-D/tarefa-d.exe
+	gfortran tarefa-E/tarefa-e.f   -o tarefa-E/tarefa-e.exe
+	gfortran tarefa-F/tarefa-f.f   -o tarefa-F/tarefa-f.exe
 run-p6:
 	./tarefa-A/tarefa-a.exe
 	./tarefa-B/tarefa-b.exe
@@ -37,10 +36,8 @@ run-p6:
 	./tarefa-D/tarefa-d.exe
 	./tarefa-E/tarefa-e.exe
 	./tarefa-F/tarefa-f.exe
-
 run-all-graphs:
 	python3 graphs.py 
-
 tests:
 	gfortran tests.f -o tests.exe
 run-tests:
